--- a/ETL_Mini_Project_CCanala_BBurwinkel.ipynb
+++ b/ETL_Mini_Project_CCanala_BBurwinkel.ipynb
@@ -233,7 +233,8 @@
     }
    ],
    "source": [
-    "# Get a brief summary of the crowdfunding_info DataFrame.\n"
+    "# Get a brief summary of the crowdfunding_info DataFrame.\n",
+    "crowdfunding_info_df.info()"
    ]
   },
   {
@@ -275,7 +276,8 @@
     }
    ],
    "source": [
-    "# Get the crowdfunding_info_df columns.\n"
+    "# Get the crowdfunding_info_df columns.\n",
+    "crowdfunding_info_df.columns"
    ]
   },
   {
@@ -464,7 +466,9 @@
     }
    ],
    "source": [
-    "# Assign the category and subcategory values to category and subcategory columns.\n"
+    "# Assign the category and subcategory values to category and subcategory columns.\n",
+    "crowdfunding_info_df[['category', 'subcategory']] = crowdfunding_info_df['category & sub-category'].str.split('/', expand=True)\n",
+    "crowdfunding_info_df.head()"
    ]
   },
   {
@@ -488,7 +492,8 @@
    ],
    "source": [
     "# Get the unique categories and subcategories in separate lists.\n",
-    "\n",
+    "categories = crowdfunding_info_df['category'].unique()\n",
+    "subcategories = crowdfunding_info_df['subcategory'].unique()\n",
     "\n",
     "print(categories)\n",
     "print(subcategories)"
@@ -539,7 +544,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -553,9 +558,9 @@
    ],
    "source": [
     "# Use a list comprehension to add \"cat\" to each category_id. \n",
-    "\n",
+    "cat_ids = ['cat'+str(i) for i in category_ids]\n",
     "# Use a list comprehension to add \"subcat\" to each subcategory_id.    \n",
-    "\n",
+    "scat_ids = ['subcat'+str(i) for i in subcategory_ids]\n",
     "    \n",
     "print(cat_ids)\n",
     "print(scat_ids)"
@@ -563,18 +568,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Create a category DataFrame with the category_id array as the category_id and categories list as the category name.\n",
-    "\n",
-    "# Create a category DataFrame with the subcategory_id array as the subcategory_id and subcategories list as the subcategory name. \n"
+    "category_df = pd.DataFrame({\n",
+    "    'category_id': cat_ids,\n",
+    "    'category': categories\n",
+    "})\n",
+    "# Create a category DataFrame with the subcategory_id array as the subcategory_id and subcategories list as the subcategory name. \n",
+    "subcategory_df = pd.DataFrame({\n",
+    "    'subcategory_id': scat_ids,\n",
+    "    'subcategory': subcategories\n",
+    "})"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -665,7 +677,7 @@
        "8        cat9    journalism"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -676,7 +688,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -857,7 +869,7 @@
        "23       subcat24              audio"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -868,7 +880,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -907,7 +919,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -1085,7 +1097,7 @@
        "4      False           theater/plays     theater        plays  "
       ]
      },
-     "execution_count": 14,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1098,7 +1110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -1276,13 +1288,20 @@
        "4      False           theater/plays     theater        plays  "
       ]
      },
-     "execution_count": 15,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Rename the blurb, launched_at, and deadline columns.\n"
+    "# Rename the blurb, launched_at, and deadline columns.\n",
+    "campaign_df = campaign_df.rename(columns={\n",
+    "    'blurb':'description', \n",
+    "    'launched_at':'launched_date',\n",
+    "    'deadline':'end_date'})\n",
+    "\n",
+    "# Display the dataframe\n",
+    "campaign_df.head()"
    ]
   },
   {
@@ -3700,7 +3719,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.4"
+   "version": "3.12.2"
   }
  },
  "nbformat": 4,
