--- a/ETL_Mini_Project_CCanala_BBurwinkel.ipynb
+++ b/ETL_Mini_Project_CCanala_BBurwinkel.ipynb
@@ -1306,7 +1306,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -1484,18 +1484,23 @@
        "4       False      False           theater/plays     theater        plays  "
       ]
      },
-     "execution_count": 16,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Convert the goal and pledged columns to a `float` data type.\n"
+    "# Convert the goal and pledged columns to a `float` data type.\n",
+    "campaign_df['goal'] = campaign_df['goal'].astype('float')\n",
+    "campaign_df['pledged'] = campaign_df['pledged'].astype('float')\n",
+    "\n",
+    "# Display the dataframe\n",
+    "campaign_df.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -1521,18 +1526,19 @@
        "dtype: object"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Check the datatypes\n"
+    "# Check the datatypes\n",
+    "campaign_df.dtypes"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -1710,19 +1716,24 @@
        "4       False      False           theater/plays     theater        plays  "
       ]
      },
-     "execution_count": 18,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Format the launched_date and end_date columns to datetime format\n",
-    "from datetime import datetime as dt\n"
+    "from datetime import datetime as dt\n",
+    "campaign_df['end_date'] = pd.to_datetime(campaign_df['end_date'],unit='s').dt.strftime('%Y-%m-%d')\n",
+    "campaign_df['launched_date'] = pd.to_datetime(campaign_df['launched_date'],unit='s').dt.strftime('%Y-%m-%d')\n",
+    "\n",
+    "# Display the dataframe\n",
+    "campaign_df.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 26,
    "metadata": {
     "scrolled": false
    },
@@ -2056,7 +2067,7 @@
        "999        food trucks        cat1        subcat1  "
       ]
      },
-     "execution_count": 19,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2064,14 +2075,16 @@
    "source": [
     "# Merge the campaign_df with the category_df on the \"category\" column and \n",
     "# the subcategory_df on the \"subcategory\" column.\n",
+    "semi_merged_df = pd.merge(campaign_df, category_df, on=\"category\")\n",
+    "campaign_merged_df = pd.merge(semi_merged_df, subcategory_df, on='subcategory')\n",
     "\n",
-    "\n",
+    "# Display the last 10 rows\n",
     "campaign_merged_df.tail(10)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -2231,13 +2244,22 @@
        "4        cat4        subcat4  "
       ]
      },
-     "execution_count": 20,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Drop unwanted columns\n"
+    "# Drop unwanted columns\n",
+    "campaign_cleaned = campaign_merged_df.drop([\n",
+    "    'staff_pick', \n",
+    "    'spotlight',\n",
+    "    'category & sub-category', \n",
+    "    'category', \n",
+    "    'subcategory'], axis=1)\n",
+    "\n",
+    "# Diplay dataframe\n",
+    "campaign_cleaned.head()"
    ]
   },
   {
