--- a/ETL_Mini_Project_CCanala_BBurwinkel.ipynb
+++ b/ETL_Mini_Project_CCanala_BBurwinkel.ipynb
@@ -2264,7 +2264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2281,7 +2281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -2342,14 +2342,14 @@
        "4        {\"contact_id\": 2199, \"name\": \"Samuel Sorgatz\", \"email\": \"samuel.sorgatz@gmail.com\"}"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Read the data into a Pandas DataFrame. Use the `header=2` parameter when reading in the data.\n",
-    "contact_info_df = pd.read_excel('Resources/contacts.xlsx', header=2)\n",
+    "# Read the data into a Pandas DataFrame. Use the `header=3` parameter when reading in the data.\n",
+    "contact_info_df = pd.read_excel('Resources/contacts.xlsx', header=3)\n",
     "contact_info_df.head()"
    ]
   },
@@ -2377,7 +2377,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -2393,6 +2393,17 @@
     "import json\n",
     "dict_values = []\n",
     "\n",
+    "contact_info_df['contact_info'] = contact_info_df['contact_info'].apply(json.loads)\n",
+    "\n",
+    "for row in contact_info_df['contact_info']:\n",
+    "    row_list = []\n",
+    "    contact_id = row['contact_id']\n",
+    "    name = row['name']\n",
+    "    email = row['email']\n",
+    "    row_list.append(contact_id)\n",
+    "    row_list.append(name)\n",
+    "    row_list.append(email)\n",
+    "    dict_values.append(row_list)\n",
     "\n",
     "# Print out the list of values for each row.\n",
     "print(dict_values)"
@@ -2400,7 +2411,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -2473,19 +2484,23 @@
        "4        2199     Samuel Sorgatz      samuel.sorgatz@gmail.com"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Create a contact_info DataFrame and add each list of values, i.e., each row \n",
-    "# to the 'contact_id', 'name', 'email' columns.\n"
+    "# to the 'contact_id', 'name', 'email' columns.\n",
+    "contacts_df_clean = pd.DataFrame(dict_values, columns=['contact_id', 'name', 'email'])\n",
+    "\n",
+    "# Display the first 5 rows of the dataframe\n",
+    "contacts_df_clean.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -2506,12 +2521,13 @@
     }
    ],
    "source": [
-    "# Check the datatypes.\n"
+    "# Check the datatypes.\n",
+    "contacts_df_clean.info()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -2630,22 +2646,26 @@
        "9        5468  danielle.ladeck@scalfaro.net   Danielle    Ladeck"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Create a \"first\"name\" and \"last_name\" column with the first and last names from the \"name\" column. \n",
-    "\n",
+    "contacts_df_clean[['first_name', 'last_name']] = contacts_df_clean['name'].str.split(' ', expand=True)\n",
     "\n",
     "# Drop the contact_name column\n",
+    "contacts_df_clean = contacts_df_clean.drop('name', axis=1)\n",
+    "\n",
+    "# Display the dataframe\n",
+    "contacts_df_clean.head(10)\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -2764,18 +2784,22 @@
        "9        5468   Danielle    Ladeck  danielle.ladeck@scalfaro.net"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Reorder the columns\n"
+    "# Reorder the columns\n",
+    "contacts_df_clean = contacts_df_clean[['contact_id','first_name','last_name','email']]\n",
+    "\n",
+    "# Display the dataframe\n",
+    "contacts_df_clean.head(10)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -2797,7 +2821,8 @@
     }
    ],
    "source": [
-    "# Check the datatypes one more time before exporting as CSV file.\n"
+    "# Check the datatypes one more time before exporting as CSV file.\n",
+    "contacts_df_clean.info()"
    ]
   },
   {
